# more-itertools

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml
src/: chunked.rs  error.rs  first.rs  islice.rs  last.rs  lib.rs  nth_or_last.rs  peekable.rs  sequence.rs  sliced.rs  spy.rs  utils.rs
src/augmenting/: adjacent.rs  count_cycle.rs  groupby_transform.rs  intersperse.rs  mark_ends.rs  mod.rs  ncycles.rs  padded.rs  repeat_each.rs  repeat_last.rs
src/combining/: dotproduct.rs  interleave.rs  interleave_longest.rs  mod.rs  prepend.rs  roundrobin.rs  sort_together.rs  zip_equal.rs  zip_offset.rs
src/grouping/: bucket.rs  chunked.rs  chunked_even.rs  distribute.rs  distribute2.rs  divide.rs  grouper.rs  mod.rs  partition.rs  sliced.rs  split_after.rs  split_at.rs  split_before.rs  split_into.rs  split_when.rs  unzip.rs
src/itertools/: accumulate.rs  chain.rs  filter.rs  groupby.rs  islice.rs  iter.rs  map.rs  mod.rs  sum.rs  tee.rs  zip.rs
src/look_ahead_back/: mod.rs  peekable.rs  spy.rs
src/others/: cache_last.rs  cache_until.rs  iterate.rs  locate.rs  mod.rs  repeat_append_default.rs  replace.rs  rlocate.rs
src/selecting/: before_and_after.rs  filter_except.rs  filter_map.rs  first.rs  last.rs  map_except.rs  mod.rs  nth.rs  nth_or_last.rs  one.rs  only.rs  strictly_n.rs  tail.rs  take.rs
src/summarizing/: ilen.rs  mod.rs  unique_to_each.rs
src/windowing/: mod.rs  pairwise.rs  sliding_window.rs  substrings.rs  substrings_indexes.rs  triplewise.rs  windowed.rs  windowed_complete.rs
