[package]
name = "more-itertools"
version = "0.1.1"
edition = "2021"
description = "A rust implementation of python more-itertools"
license = "MIT"

repository = "https://github.com/ralgond/more-itertools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
overflow-checks = false